[project]
name = "qwla"
version = "0.1.0"
description = "Quantum computing without linear algebra"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyfunctional>=1.5.0",
    "bitarray>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
